<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_app"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_user_app"/>
        <item
            android:id="@+id/nav_system_app"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_system_app"/>
        <item
            android:id="@+id/nav_apk_file"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_extract_apk"/>
        <item
            android:id="@+id/nav_apk_wx"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_wx_apk"/>
    </group>

    <item android:title="@string/ap_share">
        <menu>
            <item
                android:id="@+id/nav_open_ap"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/open_ap"/>
            <item
                android:id="@+id/nav_connect_ap"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/connect_ap"/>
        </menu>
    </item>

</menu>
